--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   # Utility Packages
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  http: ^1.1.0
+  flutter_bloc: ^8.1.3
 
   # Icons
   cupertino_icons: ^1.0.2
@@ -27,7 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   freezed: ^2.4.5
   json_serializable: ^6.7.1
-  build_runner: ^2.4.6
+  build_runner: ^2.0.5
 
 flutter:
   uses-material-design: true
