--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   json_annotation: ^4.8.1
   http: ^1.1.0
   flutter_bloc: ^8.1.3
+  cached_network_image: ^3.3.0
 
   # Icons
   cupertino_icons: ^1.0.2
