--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^1.1.0
   flutter_bloc: ^8.1.3
   cached_network_image: ^3.3.0
+  pull_to_refresh: ^2.0.0
 
   # Icons
   cupertino_icons: ^1.0.2
