--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   cached_network_image: ^3.3.0
   pull_to_refresh: ^2.0.0
+  hydrated_bloc: ^9.1.2
+  path_provider: ^2.1.1
 
   # Icons
   cupertino_icons: ^1.0.2
