--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
+  curved_navigation_bar: ^1.0.3
 
   # Icons
   cupertino_icons: ^1.0.2
