--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,11 @@ dependencies:
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
   curved_navigation_bar: ^1.0.3
+  get: ^4.6.6
 
   # Icons
   cupertino_icons: ^1.0.2
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
